add css readme and split message component